# simplest-ffmpeg-player

./: CMakeCache.txt  CMakeLists.txt  Makefile  PackQueue.cpp  PackQueue.h  Titanic.ts  cmake_install.cmake  compile_commands.json  player  simplest_ffmpeg_player_su.cpp  tex.cc
